test/corpus/syntax.txt
===============================================================================
Simple config file
===============================================================================
# Comment
window-decoration = false

    font-style-italic = Medium Italic

palette = 11=#E49B5D

-------------------------------------------------------------------------------

(source
  (comment)
  (assignment
    (keyword)
    (value))
  (assignment
    (keyword)
    (value))
  (assignment
    (keyword)
    (value)))

===============================================================================
Invalid config values
===============================================================================
nosuchsetting = 2

-------------------------------------------------------------------------------

(source
  (assignment
    (invalid_keyword)
    (value)))
